Blender crashes while trying to slide verticies (double G function)Project file included. #67078

Closed
opened 2019-07-16 20:27:19 +02:00 by Igor · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 11:00, hash: d663048696
Worked: (optional)

Short description of error
Blender crashes after trying to slide verticies(double G).

Exact steps for others to reproduce the error
Add mesh > monkey, shift select default cube, enter edit mode, enter XRay mode, box select some verticies, press double G > Blender crashes.
Crash.blend

Just open file and press G two times.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13558 Core Profile Context 26.20.11015.5009 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 11:00, hash: `d663048696` Worked: (optional) **Short description of error** Blender crashes after trying to slide verticies(double G). **Exact steps for others to reproduce the error** Add mesh > monkey, shift select default cube, enter edit mode, enter XRay mode, box select some verticies, press double G > Blender crashes. [Crash.blend](https://archive.blender.org/developer/F7613420/Crash.blend) Just open file and press G two times.
Author

Added subscriber: @Terjke

Added subscriber: @Terjke

Added subscriber: @dark999

Added subscriber: @dark999

this bug is present on Blender linux on CPU AMD FX-8350, 16G ram, GPU Nvidia GTX690

System-Info_blender-2.80-af51988115d4.txt

this bug is present on Blender linux on CPU AMD FX-8350, 16G ram, GPU Nvidia GTX690 [System-Info_blender-2.80-af51988115d4.txt](https://archive.blender.org/developer/F7613556/System-Info_blender-2.80-af51988115d4.txt)
Igor changed title from Blender crashes while trying to slide verticies (double G function. to Blender crashes while trying to slide verticies (double G function)Project file included. 2019-07-17 00:19:34 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I can reproduce with your file, but cannot from scratch yet. But from your file I get:


- 0  0x000055556340a548 in doEdgeSlide (t=0x61b0000ea188, perc=0) at //source/blender/editors/transform/transform.c:7982
- 1  0x000055556340bd85 in applyEdgeSlide (t=0x61b0000ea188, UNUSED_mval=0x61b0000ea730) at //source/blender/editors/transform/transform.c:8096
- 2  0x00005555633a5bb4 in transformApply (C=0x60c000000ac8, t=0x61b0000ea188) at //source/blender/editors/transform/transform.c:2755
- 3  0x000055556351b7de in transform_modal (C=0x60c000000ac8, op=0x60f000017298, event=0x60c0000e9688) at /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_ops.c:428
(...)
I can reproduce with your file, but cannot from scratch yet. But from your file I get: ```//source/blender/editors/transform/transform.c:7982:33: runtime error: member access within null pointer of type 'struct EdgeSlideData' - 0 0x000055556340a548 in doEdgeSlide (t=0x61b0000ea188, perc=0) at //source/blender/editors/transform/transform.c:7982 - 1 0x000055556340bd85 in applyEdgeSlide (t=0x61b0000ea188, UNUSED_mval=0x61b0000ea730) at //source/blender/editors/transform/transform.c:8096 - 2 0x00005555633a5bb4 in transformApply (C=0x60c000000ac8, t=0x61b0000ea188) at //source/blender/editors/transform/transform.c:2755 - 3 0x000055556351b7de in transform_modal (C=0x60c000000ac8, op=0x60f000017298, event=0x60c0000e9688) at /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform_ops.c:428 (...) ```

This issue was referenced by 5ca302cb0c

This issue was referenced by 5ca302cb0cb40506e1f8a5f22e9baa3738ab4a58

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2019-07-17 04:02:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67078
No description provided.